min and max word length code, plus added its shortcus

--- a/DOS_Project/DOS_Project.vcxproj
+++ b/DOS_Project/DOS_Project.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="SHORTCUTS.txt" />
     <Text Include="Text.txt" />
     <Text Include="Help.txt" />
   </ItemGroup>
