Added Merge File Function tested

--- a/DOS_Project/DOS_Project.vcxproj.filters
+++ b/DOS_Project/DOS_Project.vcxproj.filters
@@ -36,5 +36,8 @@
     <Text Include="SHORTCUTS.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="fileMergeHelper.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
